--- a/index.html
+++ b/index.html
@@ -86,11 +86,15 @@ include_countdown: true
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
 						<img src="{{ "/images/patrocinadores/vortex.png" | relative_url }}" alt="Vortex" class="max-h-28">
 					</a>
+					<a href="https://clavis.com.br"
+						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
+						<img src="{{ "/images/patrocinadores/clavis.jpg" | relative_url }}" alt="Clavis" class="max-h-28">
+					</a>
 				</div>
 			</div>
 			<div class="mb-16">
 				<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Prata</h3>
-				<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+				<div class="grid grid-cols-1 md:grid-cols-4 gap-8">
 					<a href="https://bughunt.com.br"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
 						<img src="{{ "/images/patrocinadores/logo-bughunt.svg" | relative_url }}" alt="BugHunt" class="max-h-28">
@@ -103,7 +107,7 @@ include_countdown: true
 			</div>
 			<div class="mb-16">
 				<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Bronze</h3>
-				<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+				<div class="grid grid-cols-1 md:grid-cols-5 gap-8">
 					<a href="https://mobileappdefense.com"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
 						<img src="{{ "/images/patrocinadores/mad.jpg" | relative_url }}" alt="MAD" class="max-h-28">
