--- a/index.html
+++ b/index.html
@@ -68,49 +68,49 @@ include_countdown: true
 		<div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8 mx-auto max-w-5xl">
 			<div class="mb-16">
 				<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Diamante</h3>
-				<div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+				<div class="flex flex-wrap justify-center gap-8">
 					<a href="https://uva.br/"
 						class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/patrocinadores/uva.webp" | relative_url }}" alt="UVA" class="max-h-28">
+						<img src="{{ "/images/patrocinadores/uva.webp" | relative_url }}" alt="UVA" class="h-28 w-auto object-contain">
 					</a>
 				</div>
 			</div>
 			<div class="mb-16">
 				<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Ouro</h3>
-				<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+				<div class="flex flex-wrap justify-center gap-8">
 					<a href="https://hakaisecurity.io"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/patrocinadores/hakai.png" | relative_url }}" alt="Hakai" class="max-h-28">
+						<img src="{{ "/images/patrocinadores/hakai.png" | relative_url }}" alt="Hakai" class="h-20 w-auto object-contain">
 					</a>
 					<a href="https://www.vortexsecurity.com.br"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/patrocinadores/vortex.png" | relative_url }}" alt="Vortex" class="max-h-28">
+						<img src="{{ "/images/patrocinadores/vortex.png" | relative_url }}" alt="Vortex" class="h-20 w-auto object-contain">
 					</a>
 					<a href="https://clavis.com.br"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/patrocinadores/clavis.jpg" | relative_url }}" alt="Clavis" class="max-h-28">
+						<img src="{{ "/images/patrocinadores/clavis.jpg" | relative_url }}" alt="Clavis" class="h-20 w-auto object-contain">
 					</a>
 				</div>
 			</div>
 			<div class="mb-16">
 				<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Prata</h3>
-				<div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+				<div class="flex flex-wrap justify-center gap-8">
 					<a href="https://bughunt.com.br"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/patrocinadores/logo-bughunt.svg" | relative_url }}" alt="BugHunt" class="max-h-28">
+						<img src="{{ "/images/patrocinadores/logo-bughunt.svg" | relative_url }}" alt="BugHunt" class="h-16 w-auto object-contain">
 					</a>
 					<a href="https://redwolves.io"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/patrocinadores/redwolves.jpg" | relative_url }}" alt="Red Wolves" class="max-h-28">
+						<img src="{{ "/images/patrocinadores/redwolves.jpg" | relative_url }}" alt="Red Wolves" class="h-16 w-auto object-contain">
 					</a>
 				</div>
 			</div>
 			<div class="mb-16">
 				<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Bronze</h3>
-				<div class="grid grid-cols-1 md:grid-cols-5 gap-8">
+				<div class="flex flex-wrap justify-center gap-8">
 					<a href="https://mobileappdefense.com"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/patrocinadores/mad.jpg" | relative_url }}" alt="MAD" class="max-h-28">
+						<img src="{{ "/images/patrocinadores/mad.jpg" | relative_url }}" alt="MAD" class="h-12 w-auto object-contain">
 					</a>
 				</div>
 			</div>
@@ -122,26 +122,26 @@ include_countdown: true
 		<h2 class="text-4xl font-bold text-center text-white mb-12">Apoiadores</h2>
 		<div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8 mx-auto max-w-5xl">
 			<div class="mb-16">
-				<div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+				<div class="flex flex-wrap justify-center gap-8">
 					<a href="https://www.instagram.com/meninadecybersec/"
 						class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/apoiadores/meninacybersec.jpg" | relative_url }}" alt="Menina de Cybersec" class="max-h-28">
+						<img src="{{ "/images/apoiadores/meninacybersec.jpg" | relative_url }}" alt="Menina de Cybersec" class="h-24 w-auto object-contain">
 					</a>
 					<a href="https://linktr.ee/hackinrio" 
 						class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/apoiadores/hackinrio.png" | relative_url }}" alt="Hack in Rio" class="max-h-28">
+						<img src="{{ "/images/apoiadores/hackinrio.png" | relative_url }}" alt="Hack in Rio" class="h-24 w-auto object-contain">
 					</a>
 					<a href="https://www.instagram.com/womcy/" 
 						class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/apoiadores/womcy.png" | relative_url }}" alt="Womcy" class="max-h-28">
+						<img src="{{ "/images/apoiadores/womcy.png" | relative_url }}" alt="Womcy" class="h-24 w-auto object-contain">
 					</a>
 					<a href="https://www.riomakerspace.com.br" 
 						class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/apoiadores/rms.jpeg" | relative_url }}" alt="Rio Maker Space" class="max-h-28">
+						<img src="{{ "/images/apoiadores/rms.jpeg" | relative_url }}" alt="Rio Maker Space" class="h-24 w-auto object-contain">
 					</a>
 					<a href="https://redteamvillage.io" 
 						class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/apoiadores/redteamvillage.png" | relative_url }}" alt="Red Team Village" class="max-h-28">
+						<img src="{{ "/images/apoiadores/redteamvillage.png" | relative_url }}" alt="Red Team Village" class="h-24 w-auto object-contain">
 					</a>
 				</div>
 			</div>
