--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@ include_countdown: true
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
 						<img src="{{ "/images/patrocinadores/clavis.jpg" | relative_url }}" alt="Clavis" class="h-20 w-auto object-contain">
 					</a>
+					<a href="https://www.fiap.com.br"
+						class="bg-gray-800 rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
+						<img src="{{ "/images/patrocinadores/logo-fiap - branco.png" | relative_url }}" alt="FIAP" class="h-20 w-auto object-contain">
+					</a>
 				</div>
 			</div>
 			<div class="mb-16">
