fixing portuguese issues

--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@ footer_text: "2025 - 2026 | BSidesRJ - Todos os direitos reservados."
 	<h1 class="text-4xl font-bold text-center text-yellow-400 mb-12">Contato</h1>
 	<div class="max-w-3xl mx-auto">
 		<div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8 mb-8">
-			<h2 class="text-2xl font-bold mb-6 text-center">Redes Sociais</h2>
+			<h2 class="text-2xl font-bold mb-6 text-center">Redes sociais</h2>
 			<div class="grid grid-cols-1 md:grid-cols-2 gap-6">
 				<a href="https://www.instagram.com/bsidesrj/" target="_blank"
 					class="flex items-center justify-center space-x-3 bg-gradient-to-r from-yellow-400 via-pink-500 via-red-500 to-purple-600 hover:from-yellow-500 hover:via-pink-600 hover:via-red-600 hover:to-purple-700 transition p-4 rounded-lg">
@@ -29,7 +29,7 @@ footer_text: "2025 - 2026 | BSidesRJ - Todos os direitos reservados."
 			</div>
 		</div>
 		<div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8 mb-8">
-			<h2 class="text-2xl font-bold mb-6 text-center">Email</h2>
+			<h2 class="text-2xl font-bold mb-6 text-center">E-mail</h2>
 			<p class="text-center mb-4">Para dúvidas, sugestões ou parcerias, entre em contato:</p>
 			<div class="flex justify-center">
 				<a href="mailto:contato@bsidesrj.com.br" class="text-yellow-400 hover:text-yellow-300 text-xl font-semibold">
@@ -38,7 +38,7 @@ footer_text: "2025 - 2026 | BSidesRJ - Todos os direitos reservados."
 			</div>
 		</div>
 		<div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8">
-			<h2 class="text-2xl font-bold mb-6 text-center">Local do Evento</h2>
+		<h2 class="text-2xl font-bold mb-6 text-center">Local do evento</h2>
 			<div class="text-center mb-6">
 				<p class="text-xl text-yellow-400 mb-2">Universidade Veiga de Almeida - Campus Tijuca</p>
 				<p>Rua Ibituruna, 108 - Tijuca</p>
@@ -51,7 +51,7 @@ footer_text: "2025 - 2026 | BSidesRJ - Todos os direitos reservados."
 						<path
 							d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
 					</svg>
-					Informações do Campus
+					Informações do campus
 				</a>
 				<a href="https://goo.gl/maps/K8s7nQBsfKEfCqMf6" target="_blank"
 					class="inline-flex items-center justify-center bg-transparent border-2 border-yellow-400 text-yellow-400 px-6 py-2 rounded-lg hover:bg-yellow-400 hover:text-black transition duration-300">
