--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ include_countdown: true
 <main class="flex-grow">
 	<div class="container mx-auto px-4 py-16 text-center">
 		<h1 class="text-5xl md:text-6xl font-bold text-white mb-8">BSides Rio de Janeiro 2026</h1>
-		<p class="text-xl md:text-2xl text-yellow-400 mb-8">28 de Março de 2026 - O maior evento de segurança da informação do Rio</p>
+		<p class="text-xl md:text-2xl text-yellow-400 mb-8">28 de março de 2026 - O maior evento de segurança da informação do Rio</p>
 		<div class="mb-12 bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 max-w-4xl mx-auto">
-			<h2 class="text-2xl font-bold text-white mb-4">Local do Evento</h2>
+		<h2 class="text-2xl font-bold text-white mb-4">Local do evento</h2>
 			<div class="text-yellow-400 text-xl mb-4">Universidade Veiga de Almeida - Campus Tijuca</div>
 			<p class="text-white mb-4">Rua Ibituruna, 108 - Tijuca, Rio de Janeiro - RJ</p>
 			<div class="flex flex-col sm:flex-row gap-4 justify-center">
@@ -17,7 +17,7 @@ include_countdown: true
 					<svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20">
 						<path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
 					</svg>
-					Informações do Campus
+					Informações do campus
 				</a>
 				<a href="https://goo.gl/maps/K8s7nQBsfKEfCqMf6" target="_blank"
 					class="inline-flex items-center justify-center bg-transparent border-2 border-yellow-400 text-yellow-400 px-6 py-2 rounded-lg hover:bg-yellow-400 hover:text-black transition duration-300">
@@ -53,7 +53,7 @@ include_countdown: true
 		<div class="flex flex-col md:flex-row gap-6 justify-center items-center">
 			<a href="https://www.sympla.com.br/evento/bsides-rio-de-janeiro/3226424" target="_blank"
 				class="hero-button inline-block bg-yellow-400 text-black text-xl font-bold py-4 px-8 rounded-lg hover:bg-yellow-500 transition duration-300 transform hover:scale-105">
-				Adquira seu ingresso de apoaidor
+				Adquira seu ingresso de apoiador
 			</a>
 		</div>
 	</div>
@@ -63,7 +63,7 @@ include_countdown: true
 		<h2 class="text-4xl font-bold text-center text-white mb-12">Patrocinadores</h2>
 		<div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8 mx-auto max-w-5xl">
 			<div class="mb-16">
-				<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Diamante</h3>
+				<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores diamante</h3>
 				<div class="flex flex-wrap justify-center gap-8">
 					<a href="https://uva.br/"
 						class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
@@ -72,7 +72,7 @@ include_countdown: true
 				</div>
 			</div>
 			<div class="mb-16">
-				<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Ouro</h3>
+				<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores ouro</h3>
 				<div class="flex flex-wrap justify-center gap-8">
 					<a href="https://hakaisecurity.io"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
@@ -93,7 +93,7 @@ include_countdown: true
 				</div>
 			</div>
 			<div class="mb-16">
-				<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Prata</h3>
+				<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores prata</h3>
 				<div class="flex flex-wrap justify-center gap-8">
 					<a href="https://bughunt.com.br"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
@@ -106,7 +106,7 @@ include_countdown: true
 				</div>
 			</div>
 			<div class="mb-16">
-				<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Bronze</h3>
+				<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores bronze</h3>
 				<div class="flex flex-wrap justify-center gap-8">
 					<a href="https://mobileappdefense.com"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
