--- a/schedule.html
+++ b/schedule.html
@@ -17,7 +17,7 @@ title: Agenda
 								<p class="text-sm text-gray-300">{{ item.speaker }}</p>
 							{% endif %}
 							{% if item.speaker_url %}
-								<a href="{{ item.speaker_url | relative_url }}" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
+								<a href="{{ item.speaker_url | relative_url }}" class="text-yellow-400 hover:text-yellow-300 text-sm">Ver detalhes</a>
 							{% endif %}
 						</div>
 					{% endfor %}
