--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ include_countdown: true
 				<div class="flex flex-wrap justify-center gap-8">
 					<a href="https://uva.br/"
 						class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/patrocinadores/uva.webp" | relative_url }}" alt="UVA" class="h-28 w-auto object-contain">
+						<img src="{{ "/images/patrocinadores/uva.webp" | relative_url }}" alt="UVA" class="h-20 w-40 object-contain">
 					</a>
 				</div>
 			</div>
@@ -76,19 +76,19 @@ include_countdown: true
 				<div class="flex flex-wrap justify-center gap-8">
 					<a href="https://hakaisecurity.io"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/patrocinadores/hakai.png" | relative_url }}" alt="Hakai" class="h-20 w-auto object-contain">
+						<img src="{{ "/images/patrocinadores/hakai.png" | relative_url }}" alt="Hakai" class="h-20 w-40 object-contain">
 					</a>
 					<a href="https://www.vortexsecurity.com.br"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/patrocinadores/vortex.png" | relative_url }}" alt="Vortex" class="h-20 w-auto object-contain">
+						<img src="{{ "/images/patrocinadores/vortex.png" | relative_url }}" alt="Vortex" class="h-20 w-40 object-contain">
 					</a>
 					<a href="https://clavis.com.br"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/patrocinadores/clavis.jpg" | relative_url }}" alt="Clavis" class="h-20 w-auto object-contain">
+						<img src="{{ "/images/patrocinadores/clavis.jpg" | relative_url }}" alt="Clavis" class="h-20 w-40 object-contain">
 					</a>
 					<a href="https://www.fiap.com.br"
 						class="bg-gray-800 rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/patrocinadores/logo-fiap.png" | relative_url }}" alt="FIAP" class="h-20 w-auto object-contain">
+						<img src="{{ "/images/patrocinadores/logo-fiap.png" | relative_url }}" alt="FIAP" class="h-20 w-40 object-contain">
 					</a>
 				</div>
 			</div>
@@ -97,11 +97,11 @@ include_countdown: true
 				<div class="flex flex-wrap justify-center gap-8">
 					<a href="https://bughunt.com.br"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/patrocinadores/logo-bughunt.svg" | relative_url }}" alt="BugHunt" class="h-16 w-auto object-contain">
+						<img src="{{ "/images/patrocinadores/logo-bughunt.svg" | relative_url }}" alt="BugHunt" class="h-20 w-40 object-contain">
 					</a>
 					<a href="https://redwolves.io"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/patrocinadores/redwolves.jpg" | relative_url }}" alt="Red Wolves" class="h-16 w-auto object-contain">
+						<img src="{{ "/images/patrocinadores/redwolves.jpg" | relative_url }}" alt="Red Wolves" class="h-20 w-40 object-contain">
 					</a>
 				</div>
 			</div>
@@ -110,7 +110,7 @@ include_countdown: true
 				<div class="flex flex-wrap justify-center gap-8">
 					<a href="https://mobileappdefense.com"
 						class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-						<img src="{{ "/images/patrocinadores/mad.jpg" | relative_url }}" alt="MAD" class="h-12 w-auto object-contain">
+						<img src="{{ "/images/patrocinadores/mad.jpg" | relative_url }}" alt="MAD" class="h-20 w-40 object-contain">
 					</a>
 				</div>
 			</div>
