Add ISACA Rio de Janeiro Chapter link and image
Added a new link to ISACA Rio de Janeiro Chapter with an image.

--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@ include_countdown: true
 						class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
 						<img src="{{ "/images/apoiadores/redteamvillage.png" | relative_url }}" alt="Red Team Village" class="h-24 w-auto object-contain">
 					</a>
+					<a href="https://engage.isaca.org/riodejaneirochapter/home" 
+						class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+						<img src="{{ "/images/apoiadores/ISACA%20RIO.jpeg" | relative_url }}" alt="Red Team Village" class="h-24 w-auto object-contain">
+					</a>
 				</div>
 			</div>
 		</div>
